logs/donkey-scraper.log
Listing '.'...
Listing './bin'...
Compiling './bin/jp.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/donkey'...
Compiling './lib/python3.5/site-packages/donkey/grabber.py'...
***   File "./lib/python3.5/site-packages/donkey/grabber.py", line 31
    print request({'url':'http://example.com'})
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/donkey/grabbers'...
Compiling './lib/python3.5/site-packages/donkey/grabbers/retry.py'...
***   File "./lib/python3.5/site-packages/donkey/grabbers/retry.py", line 32
    except ExceptionToCheck, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/donkey/handler.py'...
***   File "./lib/python3.5/site-packages/donkey/handler.py", line 68
    print handle('XPATH',obj, qry)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/donkey/handlers'...
Compiling './lib/python3.5/site-packages/donkey/query.py'...
***   File "./lib/python3.5/site-packages/donkey/query.py", line 110
    print q['description']
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/donkey_scraper-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/jmespath'...
Listing './lib/python3.5/site-packages/jmespath-0.9.3.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
